WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42851
Don't assert when Connection::invalidate is called before Connection::dispatchConnectionDidClose
https://bugs.webkit.org/show_bug.cgi?id=42851
Summary
Don't assert when Connection::invalidate is called before Connection::dispatc...
Anders Carlsson
Reported
2010-07-22 14:32:20 PDT
Don't assert when Connection::invalidate is called before Connection::dispatchConnectionDidClose
Attachments
Patch
(1.31 KB, patch)
2010-07-22 14:38 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2010-07-22 14:38:33 PDT
Created
attachment 62342
[details]
Patch
Anders Carlsson
Comment 2
2010-07-22 15:04:28 PDT
Committed
r63916
: <
http://trac.webkit.org/changeset/63916
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug