Don't assert when Connection::invalidate is called before Connection::dispatchConnectionDidClose https://bugs.webkit.org/show_bug.cgi?id=42851

Reviewed by Sam Weinig.

* Platform/CoreIPC/Connection.cpp:
(CoreIPC::Connection::dispatchConnectionDidClose):
Just return early if m_client is 0.

Canonical link: https://commits.webkit.org/54753@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63916 268f45cc-cd09-0410-ab3c-d52691b4dbfc